<resources>
    <string name="app_name" translatable="false">Shiftly</string>
    <string name="app_short_description">Time management made simple…</string>

    <!-- SIGN IN ACTIVITY -->
    <string name="signin_password_edittext">Password</string>
    <string name="signin_request_button">Sign In</string>
    <string name="signin_signup_button">Sign Up</string>
    <string name="signin_invalid_password">Please enter a valid password.</string>
    <string name="signin_authenticationfailed">Failed to sign in, please try again later.</string>

    <!-- FORGOT PASSWORD ACTIVITY -->
    <string name="forgotpassword_activityname">Forgot your password?</string>
    <string name="forgotpassword_shortdescription">Please enter your email address to request a password reset.</string>
    <string name="forgotpassword_request_button">Reset Password</string>
    <string name="forgotpassword_success_message">Successfully sent password reset email.</string>
    <string name="forgotpassword_failed_message">Failed to send password reset email, is your email address right?</string>

    <!-- SIGN UP ACTIVITY -->
    <string name="signup_activityname">Sign up</string>
    <string name="signup_repeatpassword">Repeat Password</string>
    <string name="signup_request_button">Register</string>

    <!-- GENERAL STRINGS -->
    <string name="email_address">Email Address</string>
    <string name="name">Name</string>
    <string name="password">Password</string>

    <!-- VALIDATION ERRORS -->
    <string name="invalid_emailaddress">Please enter a valid email address.</string>

</resources>
